diesel_compile_tests/tests/fail/derive/as_expression_without_sql_type.rs
extern crate diesel;
use diesel::expression::AsExpression;

#[derive(AsExpression)]
struct Lol;

fn main() {}
