diesel_compile_tests/tests/fail/derive/as_expression_without_sql_type.stderr
error: At least one `sql_type` is needed for deriving `AsExpression` on a structure.
 --> tests/fail/derive/as_expression_without_sql_type.rs:4:10
  |
4 | #[derive(AsExpression)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `AsExpression` (in Nightly builds, run with -Z macro-backtrace for more info)
